--- a/[1]deface_with_brainsfit.ipynb
+++ b/[1]deface_with_brainsfit.ipynb
@@ -69,7 +69,13 @@
     "# print example paths\n",
     "print(\"Input images: \", floating_imgs[0:3])\n",
     "print(\"Existing transforms: \", existing_transform_paths[0:3])\n",
-    "print(\"Output paths: \", results_folder_paths[0:3])"
+    "print(\"Output paths: \", results_folder_paths[0:3])\n",
+    "\n",
+    "# path to BRAINSFit executable\n",
+    "BRAINSFit_bin_path = os.path.join(\"./BRAINSTools/BRAINSFit\")\n",
+    "\n",
+    "# path to BRAINSFit executable\n",
+    "BRAINSresample_bin_path = \"./BRAINSTools/BRAINSResample\""
    ]
   },
   {
@@ -377,9 +383,6 @@
     "        target_nii = nib.load(target)\n",
     "        floating_nii = nib.load(floating)\n",
     "        \n",
-    "        # path to BRAINSFit executable, or simply \"BRAINSFit\" if it is in the PATH\n",
-    "        BRAINSFit_bin_path = os.path.join(\"./BRAINSTools/BRAINSFit\")\n",
-    "        \n",
     "        if os.path.isfile(ex_tfm):\n",
     "            print(f\"Using existing initialTransform {ex_tfm} instead of running registration...\")\n",
     "            out_affine = ex_tfm\n",
@@ -435,8 +438,6 @@
     "        # define path to the registered and resampled face mask\n",
     "        face_mask_resampled_path = os.path.join(results_folder_path, os.path.basename(target_face_mask).replace(\".nii.gz\", \"_resampled.nii.gz\"))\n",
     "        \n",
-    "        # path to BRAINSFit executable, or simply \"BRAINSFit\" if it is in the PATH\n",
-    "        BRAINSresample_bin_path = \"./BRAINSTools/BRAINSResample\"\n",
     "        os.system(      f' \"{BRAINSresample_bin_path}\" '  + \n",
     "                        f'--inputVolume \"{target_face_mask}\" ' + \n",
     "                        f' --referenceVolume \"{floating}\" ' +\n",
